SCMNEW-42 refactor(uaa-auth): harden legacy and shahkar authentication flows
- centralize legacy appVersion parsing and clientId resolution
- support AppVersion/app_version/app-version header variants in code
- reject unknown appVersion values instead of defaulting to PWA
- map PWA, MB, and SA appVersion prefixes explicitly
- remove unused SMS OTP OAuth2 grant package and token endpoint registration
- keep PWA/MB two-step login on legacy password/default grant flow
- refactor Shahkar as Super App-only authentication flow
- move Shahkar ownership, OTP challenge, and session cache logic out of converter
- create Shahkar verified user only after successful OTP verification
- move Shahkar token out of generic security.token package
- rename FirstLvl login tokens to Login-specific authentication tokens
- split security.token into authentication and OAuth2 responsibility packages
- keep legacy password encoder package for active MD5 compatibility
- update scm-uaa README with appVersion, Shahkar, and login-token flow documentation