@@ -1,21 +1,13 @@
 package ir.daneshrefah.scm.uaa.config;
 
-import com.hazelcast.core.HazelcastInstance;
 import ir.daneshrefah.scm.uaa.security.filter.MissingGrantTypeFallbackFilter;
 import ir.daneshrefah.scm.uaa.security.oauth2.grant.legacy.LegacyAuthProperties;
 import ir.daneshrefah.scm.uaa.security.oauth2.grant.legacy.converter.LegacyPasswordGrantAuthenticationConverter;
 import ir.daneshrefah.scm.uaa.security.oauth2.grant.legacy.provider.LegacyPasswordGrantAuthenticationProvider;
 import ir.daneshrefah.scm.uaa.security.oauth2.grant.shahkar.ShahkarGrantAuthenticationConverter;
 import ir.daneshrefah.scm.uaa.security.oauth2.grant.shahkar.ShahkarGrantAuthenticationProvider;
-import ir.daneshrefah.scm.uaa.security.oauth2.grant.smsotp.SmsOtpGrantAuthenticationConverter;
-import ir.daneshrefah.scm.uaa.security.oauth2.grant.smsotp.SmsOtpGrantAuthenticationProvider;
-import ir.daneshrefah.scm.uaa.service.shahkar.ShahkarOwnershipService;
-import ir.daneshrefah.scm.uaa.service.user.OtpUserService;
 import ir.daneshrefah.scm.uaa.utils.Urls;
 import ir.daneshrefah.scm.uaa.web.login.ClientLoginThemeProperties;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
@@ -31,10 +23,9 @@ import org.springframework.security.web.authentication.www.BasicAuthenticationFi
 import org.springframework.security.web.util.matcher.MediaTypeRequestMatcher;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-@RequiredArgsConstructor
 @EnableConfigurationProperties({
         PwaAuthenticationConfigProperties.class,
         LegacyAuthProperties.class,
@@ -44,22 +35,13 @@ import java.util.Arrays;
 public class AuthorizationServerSecurityConfig {
     private static final String LOGIN_PROCESS_URI = "/login";
 
-    private final OtpUserService otpUserService;
-    private final ShahkarOwnershipService shahkarOwnershipService;
-
-    @Qualifier("hazelcastClient")
-    private final HazelcastInstance hazelcastInstance;
-
-    @Value("${scm.super-app.session-ttl}")
-    private Long sessionTtl;
-
     @Bean
     @Order(1)
     public SecurityFilterChain authorizationServerSecurityFilterChain(
             HttpSecurity http,
             LegacyPasswordGrantAuthenticationConverter legacyPasswordGrantAuthenticationConverter,
             LegacyPasswordGrantAuthenticationProvider legacyPasswordGrantAuthenticationProvider,
-            SmsOtpGrantAuthenticationProvider smsOtpGrantAuthenticationProvider,
+            ShahkarGrantAuthenticationConverter shahkarGrantAuthenticationConverter,
             ShahkarGrantAuthenticationProvider shahkarGrantAuthenticationProvider
     ) throws Exception {
         OAuth2AuthorizationServerConfigurer authorizationServerConfigurer = new OAuth2AuthorizationServerConfigurer();
@@ -67,18 +49,11 @@ public class AuthorizationServerSecurityConfig {
         authorizationServerConfigurer
                 .authorizationEndpoint(authorizationEndpoint -> authorizationEndpoint.consentPage("/consent"))
                 .tokenEndpoint(tokenEndpoint -> tokenEndpoint
-                        .accessTokenRequestConverters(converters -> converters.addAll(Arrays.asList(
+                        .accessTokenRequestConverters(converters -> converters.addAll(List.of(
                                 legacyPasswordGrantAuthenticationConverter,
-                                new SmsOtpGrantAuthenticationConverter(),
-                                new ShahkarGrantAuthenticationConverter(
-                                        otpUserService,
-                                        shahkarOwnershipService,
-                                        hazelcastInstance,
-                                        sessionTtl
-                                )
+                                shahkarGrantAuthenticationConverter
                         )))
                         .authenticationProvider(legacyPasswordGrantAuthenticationProvider)
-                        .authenticationProvider(smsOtpGrantAuthenticationProvider)
                         .authenticationProvider(shahkarGrantAuthenticationProvider)
                 )
                 .oidc(Customizer.withDefaults());
